[package]
name = "polars-utils"
version = "0.1.0"
edition = "2024"

[lib]
name = "polars_utils"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.46.0", default-features = false }
polars-arrow = { version = "0.46.0", default-features = false }
sha2 = "0.10.9"
hmac = "0.12"
hex = "0.4"
